--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <title>Rocky</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h1>Let´s Play Rocky!</h1>
+    </div>
+    <div class="hero">
+      <h2>Choose your play</h2>
+      <div class="options">
+        <img
+          id="rock"
+          src="https://cdn.lolalytics.com/generated/champion280px/malphite.jpg"
+          alt="Rock"
+        />
+        <img
+          id="paper"
+          src="https://cdn.lolalytics.com/generated/champion280px/amumu.jpg"
+          alt="Paper"
+        />
+        <img
+          id="scissors"
+          src="https://cdn.lolalytics.com/generated/champion280px/gwen.jpg"
+          alt="Scissors"
+        />
+      </div>
+      <div class="game">
+        <div class="cpuOption">
+          <h2 id="cpuChoice"></h2>
+          <h2 id="winner"></h2>
+        </div>
+        <div class="score">
+          <h2 id="scoreboard">0 - 0</h2>
+          <div id="gameOver">
+            <h1>GAME OVER</h1>
+            <h2>Choose a new option to play again</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
